Fix contact page alignment w bootstrap

--- a/frontend/src/Contact.css
+++ b/frontend/src/Contact.css
@@ -3,15 +3,6 @@
     padding: 10px;
 }
             
-label {
-	float: left;
-    width: 100px;
-    clear: left;
-    text-align: right;
-    padding-right: 10px;
-    margin-top: 10px;
-}
-            
 #myName {
     margin-top: 5px;
     display: block;
